vaadincreate-ui/src/main/webapp/VAADIN/themes/vaadincreate/vaadincreate.scss
// Global variable overrides. Must be declared before importing Valo.

$v-app-loading-text: "Vaadin Create '23";
$v-luminance-threshold: 180 !default;

$valo-menu-background-color: rgb(59, 63, 66) !default;

$v-focus-color: rgb(33, 101, 161) !default;
$v-error-indicator-color: #eb1937 !default;
$v-friendly-color: rgb(45, 166, 73);

$v-font-size: 15px !default;
$v-font-weight: 400 !default;
$v-unit-size: 32px !default;

$v-layout-margin-top: round($v-unit-size / 1.5) !default;
$v-layout-margin-right: $v-layout-margin-top !default;
$v-layout-margin-bottom: $v-layout-margin-top !default;
$v-layout-margin-left: $v-layout-margin-top !default;
$v-layout-spacing-vertical: round($v-unit-size / 1.8) !default;
$v-layout-spacing-horizontal: round($v-unit-size / 1.8) !default;

// Custom variable definitions for application theme

$login-info-width: 300px !default;
$login-info-opacity: 0.8 !default;
$login-form-opacity: 0.9 !default;
$login-background-color: $editor-background-color !default;
$login-background-image: "../images/login-background.jpg" !default;

$editor-background-color: #fafafa !default;
$editor-shadow: 0 0 10px 10px rgba(0,0,0,.1) !default;
$editor-embed-background-color: darken($editor-background-color, 5%) !default;
$editor-raised-background-color: lighten($editor-background-color, 10%) !default;
$editor-caption-font-color: valo-font-color($editor-background-color, 0.8) !default;

$color-available: var(--color-available) !default;
$color-coming: var(--color-coming) !default;
$color-discontinued: var(--color-discontinued) !default;

$light-shadow: 0 2px 3px rgba(0, 0, 0, 0.05) !default;
$chart-shadow: $light-shadow !default;
$admin-content-shadow: $light-shadow !default;

$highlight-contrast-color: #b8d0ec;
$warning-indicator-color:  $v-error-indicator-level-warning-color !default;

$fake-grid-border-color: #d4d4d4;
$fake-grid-header-background-color: #fafafa;
$fake-grid-background-color: white;

@import "../valo/valo.scss";

// IMPORT MIXINS
// The theme mixins are imported in a specific order to ensure that the
// more specific mixins override the more general ones.
// The theme is large and could be split into multiple files if needed.
@import "mixins/login.scss";
@import "mixins/books.scss";
@import "mixins/about.scss";
@import "mixins/admin.scss";
@import "mixins/dashboard.scss";
@import "mixins/error.scss";
@import "mixins/storefront.scss";
@import "mixins/utilities.scss";
@import "mixins/responsive.scss";
@import "mixins/offline.scss";
@import "mixins/purchases.scss";

@keyframes fadeIn { from { opacity: 1; } to { opacity: 0; } }

@keyframes rotation {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@mixin vaadincreate {
  // IMPORT VALO THEME
  @include valo;

  // VIEW SPECIFIC STYLES
  @include login;
  @include books;
  @include about;
  @include admin;
  @include dashboard;
  @include error;
  @include storefront;
  @include utilities;
  @include responsive;
  @include offline;
  @include purchases;

  // GENERAL NON VIEW SPECIFIC STYLES
  --color-available: #2dd085;
  --color-coming: #ffc66e;
  --color-discontinued: #f54993;

  .v-spacing {
    height: 10px;
  }

  .valo-menu-toggle {
    color: $highlight-contrast-color;
  }

  .valo-menu-item {
    padding: 4px 32px 4px 16px;	  
  }

  .valo-menu {
    color: valo-font-color($valo-menu-background-color, 0.8);

    .valo-menu-item.selected .v-icon {
      color: lighten($v-focus-color, 25%);
    }
  }

  // It sounds like a bug in CustomField the need to tweak this
  .v-customcomponent {
    input {
      width: 100%;
    }
  }

  span#logout-2:focus-visible {
    color: white;
    outline: none;
  }

  span#logout-2:hover {
    color: white;
    outline: none;
  } 

  .valo-menu-toggle:focus-visible {
    color: white;
  }
 
  .valo-menu-toggle:hover {
    color: white;
  }

  .valo-menu-item-selected:focus-visible {
    .v-icon {
      color: white;
    }
  }

  .valo-menu-title {
    .v-caption {
      display: none;
    }
    .valo-menu-logo {
      padding: 3px;
    }
  }

  .v-tabsheet-tabitemcell:focus {
    text-shadow: $v-focus-color 1px 0 1px;
  }

  .v-tabsheet-tabcontainer:focus-within {
    box-shadow: 0 1px 0 0 $v-focus-color;
  }

  // Fix for form layout captions not changing color on focus
  .v-formlayout-row:focus-within {
    .v-caption {
      color: $v-focus-color;
    }
  }

  .v-has-caption:focus-within {
    .v-caption {
      color: $v-focus-color;
    }
  }

  .v-button-danger {
    color: white;
  }
 
  // Hide spinner buttons from number input
  input[type=number]::-webkit-inner-spin-button,
  input[type=number]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }
  input[type=number] {
  	appearance: textfield;
  }

  // Replace loading indicator with spinner animation
  .v-loading-indicator {
    width: 48px;
    height: 48px;
    border: 5px solid $v-focus-color;
    border-bottom-color: transparent;
    border-radius: 50%;
    display: inline-block;
    background-color: transparent;
    box-sizing: border-box;
    --spinner-speed: 1s;
    animation: rotation var(--spinner-speed) linear infinite !important;
    position: fixed;
    top: 47%;
    left: 47%;
  }

  .v-ff {
    .v-loading-indicator,
    .v-loading-indicator-wait,
    .v-loading-indicator-delay {
      width: 48px !important;
    }
  }

  // Different loading indicator stages as spinner animation which
  // slows down in steps and changes color
  .v-loading-indicator.second.v-loading-indicator-delay {
    width: 48px;
    border: 5px solid $v-error-indicator-level-warning-color;
    border-bottom-color: transparent;
    --spinner-speed: 1.5s;
  }

  .v-loading-indicator.third.v-loading-indicator-wait {
    width: 48px;
    border: 5px solid $v-error-indicator-color;
    border-bottom-color: transparent;
    --spinner-speed: 2s;
  }

  .v-loading-indicator[style*="none"] {
    animation: unset !important;
    width: 48px !important;
    transition: unset !important;
  }

  // Allow tabsheet panels to scroll when content overflows
  .v-tabsheet-tabsheetpanel > .v-scrollable > .v-widget {
    overflow: auto;
  }

  // Fix for dialog header icons being too close to the text
  .v-window-header > .v-icon {
    margin-right: 5px
  }

  // These labels are excessively verbose, thus hidden
  .v-window-wrap {
    div[aria-label="Top of dialog"] {
      display: none;
    }

    div[aria-label="Bottom of Dialog"] {
      display: none;
    }
  }
}

